app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo # {"$kpt-set":"teamname_setter"}
  namespace: default # {"$kpt-set":"namespace_setter"}
spec:
  replicas: 3 # {"$kpt-set":"replicas_setter"}
  selector:
    matchLabels:
      run: demo # {"$kpt-set":"teamname_setter"}
  template:
    metadata:
      labels:
        run: demo # {"$kpt-set":"teamname_setter"}
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: IfNotPresent
        name: demo # {"$kpt-set":"teamname_setter"}
        ports:
        - containerPort: 80
          protocol: TCP
