app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo # {"$kpt-set":"teamname_setter"}
  namespace: default # {"$kpt-set":"namespace_setter"}
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: demo # {"$kpt-set":"teamname_setter"}
  type: NodePort
